# sdl_core

./: .clang-format  .gitignore  .gitmodules  .mailmap  .travis.yml  0001-Reproduce-commit.patch  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  COMMITTERS.md  CONTRIBUTING.md  Doxyfile  FindQt.sh  FindQt5.sh  Jenkinsfile  LICENSE  Lint  LintAll.sh  LintMyChanges.sh  README.md  Vagrantfile  build_and_run_steps.txt  build_and_run_steps2.txt  calc_lines.py  compare_versions.py  crucible.py  gstreamer.key.pub  ignore_ret  jenkins.integration.multiple.config.run  jenkins.integration.multiple.config.run.sh  mykey.pem  qnx_6.5.0_linux_x86.cmake  qnx_6.6.0_linux_armv7.cmake  qnx_6.6.0_linux_x86.cmake  rcar_m2_agl_linux.cmake  setup_Qt_x86.cmd  setup_VS2013_x64.cmd  setup_env.sh  (+2 more)
src/3rd_party-static/: CMakeLists.txt
src/3rd_party-static/MessageBroker/: CMakeLists.txt
src/3rd_party-static/encryption/: CMakeLists.txt
src/3rd_party-static/jsoncpp/: CMakeLists.txt
src/3rd_party-static/libusbx-1.0.16/: CMakeLists.txt  config.h
src/3rd_party-static/message_broker/: CMakeLists.txt
src/3rd_party-static/protobuf-2.6.1/: CHANGES.txt  CONTRIBUTORS.txt  configure
src/3rd_party-static/protobuf-2.6.1-cmake/: CMakeLists.txt  build_protoc.sh
src/3rd_party-static/sqlite_static/: CMakeLists.txt
src/3rd_party-static/test/: CMakeLists.txt  json_reader_test.cc
src/LibVrMsp/: CMakeLists.txt  asr.cpp  asr.h  fa_fir.c  fa_fir.h  lib_msp_vr.cpp  lib_msp_vr.h  msp_passthru.cpp  msp_type.h  msp_vr.cpp  resample.cc  resample.h
src/LibVrMsp/include/: msp_types.h
src/appMain/: CAppTester.cpp  CAppTester.cpp~  CAppTester.hpp  CAppTester.hpp~  CBTAdapter.cpp  CBTAdapter.hpp  CBTAdapter.hpp~  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt~  androidSmartDeviceLink.ini  android_platform_interface.cc  appMain.cpp  appMain.cpp~  appMain.h  appMain.hpp  applink.sublime-project  applink.sublime-workspace  boostlogconfig.ini  btinclude.h  build_config.txt  core.sh  core_external_proprietary.sh  daemon.sh  hmi_capabilities.json  init_policy.sh  init_policy_pasa.sh  init_policy_qnx.sh  life_cycle.cc  life_cycle.h  life_cycle_impl.cc  life_cycle_impl.h  log4cplus.properties  log4cxx.properties  logger.properties  low_voltage_signals_handler.cc  low_voltage_signals_handler.h  main.cc  main.h  main_test.cc  (+19 more)
src/appMain/test/: CMakeLists.txt  low_voltage_signals_handler_test.cc  mock_life_cycle.h
src/components/: CMakeLists.txt  test_main.cc
src/components/AppMgr/: CMakeLists.txt  CMakeLists.txt~
src/components/ConnectionHandler/: CMakeLists.txt
src/components/HMI/: index.html
src/components/Interfaces/: AppLinkCore.idl  AppLinkCore.json  Buttons.idl  Buttons.json  CMakeLists.txt  HMI_API.xml  Json_HMI_message_specification.txt  RPC2Spec.idl  TTS.idl  TTS.json  UI.idl  UI.json  VR.idl  VR.json  Voice.json  v4_protocol_v2_0_revT.xml
src/components/JSONHandler/: CMakeLists.txt  JSONHANDLERConfig.cmake  Makefile
src/components/ProtocolHandler/: CMakeLists.txt
src/components/QtHMI/: PCA_Blue.bat
src/components/SmartObjects/: CMakeLists.txt
src/components/TransportManager/: CMakeLists.txt  Doxyfile
src/components/Utils/: CMakeLists.txt
src/components/application_manager/: CMakeLists.txt  CMakeLists.txt.autosave
src/components/audio_manager/: CMakeLists.txt
src/components/can_cooperation/: CMakeLists.txt  InteriorVehicleDataCapabilities.json  reverse_sdl_pt.json
src/components/config_profile/: CMakeLists.txt
src/components/connectionHandler/: CMakeLists.txt
src/components/connection_handler/: CMakeLists.txt
src/components/crypto_manager/: CMakeLists.txt
src/components/dbus/: CMakeLists.txt  ford_xml_parser.py  make_message_descriptions.py
src/components/dbus_schema/: CMakeLists.txt
src/components/formatters/: CMakeLists.txt
src/components/functional_module/: CMakeLists.txt
src/components/hmi_message_handler/: CMakeLists.txt  mock_hmi_message_handler.h
src/components/interfaces/: CMakeLists.txt  HMI_API.h  HMI_API.xml  HMI_API.xsd  HMI_API_schema.cc  MOBILE_API.h  (+13 more)
src/manageSDL/: CMakeLists.txt  manage_sdl.cc  manage_sdl_linux.cc  manage_sdl_posix.cc
test/: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  log4cxx.properties  readme.txt  test_suit.cc
test/canSimulation/: .gitignore  Build&Runsteps.txt  CMakeLists.txt  canSimulation.pro
test/components/: CMakeLists.txt
test/gtest-example/: CMakeLists.txt  example.cpp
test/scripts/: random_stream.py
test/thirdPartyLibs/: CMakeLists.txt
test/tools/: CMakeLists.txt
tools/: CMakeLists.txt  initialise_git.sh  sdlproto.lua
tools/FlexeLint/: .gitignore  co-gcc.lnt  env-html.js  env-xml.lnt  flexelint_result.txt  flexelint_summary.txt  gcc-include-path.lnt  get_aliases_of_commiters.sh  lint_cmac.h  lint_cppmac.h  make_detailed_report.sh  names_and_aliases.txt  result  sdl-generated-incudes.lnt  sdl-include-path.lnt  sdl-modules.lnt  size-options.lnt  smartdevicelink-changes.lnt  smartdevicelink.lnt
tools/InterfaceGenerator/: .gitignore  Generator.py  MsgVersionGenerate.py  pylint.cfg  requirements.txt  runAllTests.sh
tools/OtrosLogViewer/: README.txt
tools/Utils/: c_rehash.py  collect_coverage.sh  define_parser.py  export-customer-specific.sh  fix_style_in_project.sh  generate_test_certificates.py  initialize_git.sh  install_distcc.sh  jenkins.run.test.sh  prepare_binaries_for_release.sh  preprepreproc  prepreproc.pl  update_gcc.sh  verify_setup_env.sh
tools/coding-style/: old-branch-nagger.sh
tools/infrastructure/: api_compare.py  check_style.sh  collect_coverage.sh  fix_style.sh  format_src.py  install_hooks.py  show_disabled.sh  utils.py
tools/intergen/: CMakeLists.txt  GenerateInterfaceLibrary.cmake
tools/ms/: cmake_generate.cmd  libusbx_setup.cmd  make_Qt_x86.cmd  make_VS2013_x64.cmd  make_sqlite_lib.cmd  make_test_qt.cmd  openssl_setup.cmd  setup_Qt_x86.cmd  setup_VS2013_x64.cmd
tools/policy_table_validator/: CMakeLists.txt  main.cpp
tools/sdlproto_wireshark/: Makefile  README.asciidoc  README.html  conf.tshark  sdlproto.lua
(+15205 files in other folders)
